--- a/scss/components/cards/recipe-card.scss
+++ b/scss/components/cards/recipe-card.scss
@@ -29,7 +29,7 @@
 }
 
 .card-image {
-    width: 240px;
+    width: 100%;
     height: 150px;
     border-radius: 19px 19px 0 0;
     margin-top: -8px;
