--- a/static/css/style.css
+++ b/static/css/style.css
@@ -309,7 +309,7 @@ ul li:hover ul.dropdown-menu .menu-hr {
 }
 
 .card-image {
-  width: 240px;
+  width: 100%;
   height: 150px;
   border-radius: 19px 19px 0 0;
   margin-top: -8px;
